# PlainDAQ

./: DataAcquisition.py  GUI.py  README.md  controller.py  plot.py
Development/: README.md
Development/ADC_acq_sim/: ADC_acq_sim.c  ADC_acq_sim.pio  CMakeLists.txt  README.md
Development/GUI/: Cursor_test.py  README.md  sinewave_stress_test.py
Development/SPICE_simulation/: DAC_reconstruction
Development/SPICE_simulation/Active_filter_comparison/: Active_filter_comparison.asc  README.md  TL07x.asy  tl07x_family.cir
Development/SPICE_simulation/Analog_inputs/: Analog_inputs.asc  README.md
Development/USB_speed_test/: CMakeLists.txt  USB_package_bulk_receive.py  dev_lowlevel.c  dev_lowlevel.h  usb_common.h
GUI/PlainDAQ_GUI_v01/: DataAcquisition.py  GUI.py  README.md  controller.py  plot.py
PCB/PlainDAQ_v0.1/: PlainDAQ_v01.kicad_pcb  PlainDAQ_v01.kicad_prl  README.md  plainDAQ_v01.kicad_pro  plainDAQ_v01.kicad_sch
PCB/PlainDAQ_v0.1/plain_DAQ.pretty/: CAP-0603.kicad_mod  CAP-0805.kicad_mod  CUI_TBL004-508-02BE-2GY.kicad_mod  CUI_TBL004-508-03BE-2GY.kicad_mod  CUI_TBL004-508-05BE-2GY.kicad_mod  IND-0806.kicad_mod  Raspberry_PICO.kicad_mod  Res-0603.kicad_mod  SON-8 3.0X3.0, 2.00x1.49 PAD.kicad_mod  SOT65P210X110-5N.kicad_mod  SOT95P275X110-6N.kicad_mod  SOT95P280X100-5N.kicad_mod  SOTFL50P160X60-6N.kicad_mod  TSOP6-8 4x4 (NO PAD).kicad_mod  TSOP65P640X110-16N.kicad_mod  TSSOP50P490X110-10N.kicad_mod
